[package]
name = "vinyl-core"
version = "0.0.1"
description = "A convenience layer for the FoundationDB Record Layer"
license = "MIT"
authors = ["maxmcd <m@xmcd.me>"]
homepage = "https://github.com/embly/vinyl"
edition = "2018"
build = false

[dependencies]
protobuf = "~2"
url = "2.1.0"
failure = "0.1.5"
protoc-rust = {version = "2.0", optional = true}

[features]
build_protos = ["protoc-rust"]

[[bin]]
name = "proto"
path = "build.rs"
required-features = ["build_protos"]  # only needed for build-dependencies

