[package]
name = "vinyl"
version = "0.0.2"
description = "A convenience layer for the FoundationDB Record Layer"
readme = "./readme.md"
homepage = "https://github.com/embly/vinyl"
documentation = "https://docs.rs/vinyl/"
license = "MIT"
authors = ["maxmcd <m@xmcd.me>"]
edition = "2018"
build = false

[dependencies]
grpc = "~0.6"
protobuf = "~2"
futures = "~0.1"
futures-cpupool = "~0.1"
url = "2.1.0"
failure = "0.1.5"
protoc-rust-grpc = {version = "0.6.1", optional = true}
protoc-rust = {version = "2.0", optional = true}

[features]
build_protos = ["protoc-rust", "protoc-rust-grpc"]

[[bin]]
name = "proto"
path = "build.rs"
required-features = ["build_protos"]  # only needed for build-dependencies

