[package]
name = "vinyl"
version = "0.0.3"
description = "A convenience layer for the FoundationDB Record Layer"
readme = "./readme.md"
homepage = "https://github.com/embly/vinyl"
documentation = "https://docs.rs/vinyl/"
license = "MIT"
authors = ["maxmcd <m@xmcd.me>"]
edition = "2018"
build = false

[dependencies]
grpc = "~0.6"
protobuf = "~2"
futures = "~0.1"
futures-cpupool = "~0.1"
url = "2.1.0"
failure = {version = "~0.1", features = ["std"], default-features = false}
protoc-rust-grpc = {version = "0.6.1", optional = true}
vinyl-core = "0.0.1"
# vinyl-core = {path = "../vinyl-rs-core"}

[features]
build_protos = ["protoc-rust-grpc"]

# run with:
# cargo run --features="build_protos" --bin proto
[[bin]]
name = "proto"
path = "build.rs"
required-features = ["build_protos"]  # only needed for build-dependencies

